--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,13 @@ futures = "0.3"
 parking_lot = "0.12"
 lazy_static = "1.4"
 
+# WebSocket & Real-time Collaboration
+tokio-tungstenite = "0.21"
+axum-extra = { version = "0.8", features = ["typed-routing"] }
+dashmap = "5"
+strum = { version = "0.25", features = ["derive"] }
+strum_macros = "0.25"
+
 # Testing
 test-case = "3"
 
